# roscorobot

./: .gitignore  LICENSE  README.md
Applications/corobot_buzz/: mainpage.dox  manifest.xml
Applications/corobot_buzz/launch/: corobot_buzz_gui.launch  corobot_buzz_playback.launch  corobot_ros_gui.launch
Applications/corobot_pid/: README.md  mainpage.dox  manifest.xml
Applications/corobot_pid/launch/: corobot_pid.launch  corobot_pid_test.launch
Applications/corobot_pid/node/: corobot_pid_node.py  corobot_pid_planner.py  line-detect.py
Applications/corobot_pid/src/corobot_pid/srv/: _PublishImage.py  __init__.py
Applications/corobot_pid/test/: pid_loopback.py
Corobot/: stack.xml
Corobot/PhidgetMotor/: manifest.xml
Corobot/PhidgetMotor/node/: PhidgetMotor.py
Corobot/PhidgetServo/: .gitignore  CMakeLists.txt  manifest.xml
Corobot/PhidgetServo/msg/: ServoPosition.msg  ServoType.msg
Corobot/PhidgetServo/src/: PhidgetServo.cpp
Corobot/PhidgetServo/srv/: GetEngaged.srv  GetMotorCount.srv  GetPosition.srv  GetSerialNumber.srv  GetType.srv  SetEngaged.srv  SetParam.srv  SetPosition.srv  SetType.srv
Corobot/corobot_arm/: CMakeLists.txt  CMakeLists.txt~
Corobot/corobot_arm/config/: corobot_arm_phidget.yaml~  corobot_arm_phidget2.yaml~
Corobot/corobot_arm/launch/: corobot_arm_phidget_oneArm.launch  corobot_arm_phidget_twoArms.launch~
Corobot/corobot_arm/src/: corobot_arm.cpp
Corobot/corobot_camera/: .gitignore  CMakeLists.txt  manifest.xml
Corobot/corobot_camera/cfg/cpp/corobot_camera/: corobot_cameraConfig.h
Corobot/corobot_camera/msg/: state.msg  videomode.msg
Corobot/corobot_camera/src/: dynamic_sender.cpp
Corobot/corobot_camera/srv/: control.srv  setcontrol.srv
Corobot/corobot_dead_reckoning/: mainpage.dox  manifest.xml
Corobot/corobot_dead_reckoning/src/: dead_reckoning_localizer.py  dead_reckoning_node.py
Corobot/corobot_gps/: CMakeLists.txt  manifest.xml
Corobot/corobot_hokuyo/: .gitignore
Corobot/corobot_hokuyo/src/utils/: getFirmwareVersion.cpp  getID.cpp
Corobot/corobot_joystick/: CMakeLists.txt  manifest.xml
Corobot/corobot_joystick/src/: joystick_control.cpp
Corobot/corobot_map_to_jpeg/: CMakeLists.txt  manifest.xml
Corobot/corobot_msgs/: .gitignore  manifest.xml
Corobot/corobot_pantilt/: .gitignore  CMakeLists.txt  manifest.xml
Corobot/corobot_pantilt/msg/: PanTilt.msg
Corobot/corobot_pantilt/src/: pantilt.cpp  pantilt.cpp~
Corobot/corobot_phidgetIK/: .gitignore  CMakeLists.txt  manifest.xml
Corobot/corobot_phidgetIK/msg/: BumperMsg.msg  GripperMsg.msg  IrMsg.msg  PosMsg.msg  PowerMsg.msg  RangeSensor.msg  phidget_info.msg  spatial.msg
Corobot/corobot_phidgetIK/src/: corobot_phidget.cpp
Corobot/corobot_phidgetIK/srv/: SetOdom.srv
Corobot/corobot_srvs/: .gitignore  mainpage.dox  manifest.xml
Corobot/corobot_srvs/srv/: GetMotorCount.srv  GetPosition.srv  GetSerialNumber.srv  GetType.srv  MoveArm.srv  SSC32NodeSetSpeed.srv  SetEngaged.srv  SetOdom.srv  SetParam.srv  SetType.srv  control.srv  setcontrol.srv
Corobot/corobot_ssc32/: .gitignore  CMakeLists.txt  manifest.xml
Corobot/corobot_ssc32/msg/: ssc32_info.msg
Corobot/corobot_ssc32/src/: motor.cpp  ssc32.cpp
Corobot/corobot_ssc32/srv/: SetSpeed.srv
Corobot/corobot_state_tf/: .gitignore  CMakeLists.txt
Corobot/corobot_state_tf/launch/: gmapping.launch  hectorSlam_ocu.launch
Corobot/corobot_state_tf/src/: state_tf.cpp
Corobot/corobot_teleop/: .gitignore  CMakeLists.txt  Makefile  manifest.xml
Corobot/corobot_teleop/launch/: corobot_ros_gui.launch
Corobot/corobot_teleop/msg/: DeviceInfo.msg
Corobot/corobot_teleop/src/: ArmCircleWidget.h  ArmRotationWidget.cpp  ArmRotationWidget.h  ArmWidget.cpp  ArmWidget.h  Camera.cpp  GPS.h  Gps.cpp  GripperWidget.cpp  GripperWidget.h  Hokuyo.h  MyQGraphicsView.h  Ros.cpp  Ros.h  WristWidget.cpp  WristWidget.h  joint.cpp  mainwindow.cpp  mainwindow.h
Corobot/corobot_teleop/srv/: GetPanTilt.srv  SetPanTilt.srv  SetSpeed.srv  Status.srv
